fixing Bootstrap collapsing menu and icons

--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -1,14 +1,15 @@
-@import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700);
-
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100);
 $body-bg:                                                   #ecf0f1;
-$font-family-sans-serif:                'Oxygen', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family-sans-serif:                'Roboto slab', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $navbar-height:                                        45px;
 $navbar-default-bg:                          white;
-$navbar-default-brand-color:      #c0392b;
-$brand-primary:                                    #c0392b;
+$navbar-default-brand-color:      #3da8ff;
+$brand-primary:                                    #3da8ff;
 $jumbotron-bg:                                         white;
 
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
+/*@import 'bootstrap/glyphicons';*/
 
 .center {
      text-align: center;
@@ -21,3 +22,4 @@ $jumbotron-bg:                                         white;
 body {
 	     font-weight: 300;
 }
+
